fix: getting counters for agents and policies
